# vdeque

./: .gitignore  CMakeLists.txt  Makefile  deque.h  deque_iterator.h  main.cpp
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  deque_bench.cpp
demo/: main.cpp
src/: DequeIterator.h  LockfreeQueue.h  deque.h  deque_iterator.h  deque_lockfree.h
